<resources>
    <string name="app_name"></string>
    <string name="ButtonReq">Bring me to the article!</string>
    <string name="EditTextReq">This is an editText</string>
    <string name="start_it_up" translatable="false">Opening</string>
    <string name="shut_it_down" translatable="false">Closing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Titleofarticle">Title of article</string>
    <string name="Descriptionofarticle">Description of article</string>
    <string name="Linktoarticle">Link to article</string>
    <string name="Dateofarticle">Date for the article</string>
    <string name="FirstPageTextView1"> Welcome to the first Page!</string>
    <string name="FirstPageEditText1"> Enter your name!</string>
    <string name="FirstPageButton"> Confirm Name</string>
    <string name="FirstPageMoveToNewsButton"> Bring me to the news!</string>
    <string name="FirstPageVersionNumber"> Main page - Version 7.1.3</string>
    <string name="SecondPageVersionNumber"> News feed page - Version 7.1.3</string>
    <string name="ThirdPageVersionNumber"> Favourites page - Version 7.1.3</string>
</resources>